fix: section headings w/o line break on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,6 @@ nav ul li {
 
 /* -------------MAIN----------------- */
 .main-container {
-  /* min-height: 76%; */
   display: flex;
   flex-grow: 1;
   justify-content: space-between;
@@ -97,7 +96,6 @@ nav ul li {
 aside {
   display: inline-block;
   width: var(--left-column-width);
-  /* flex-shrink: 0; */
   padding: 20px;
   padding-top: 60px;
 }
@@ -168,15 +166,12 @@ main {
   padding: 20px 30px 0 0;
   vertical-align: top;
   box-sizing: border-box;
-  /* padding: 20px;
-  padding-top: 60px; */
 }
 
 .main-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* flex-shrink: 1; */
 }
 
 .main-wrapper ul {
@@ -205,6 +200,7 @@ main .section-title {
   position: absolute;
   text-shadow: 3px 3px 3px #ecd4c3;
   margin-top: 0;
+  min-width: 200px;
 }
 
 .contacts__section-title:target,
